--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <style>
     .zhana {
+        text-align: center;
         align-items: center;
         color: rgb(117, 102, 250);
         width: 1000px;
@@ -14,7 +15,7 @@
         }
 
     .p {
-        margin-left: 445px;
+        text-align: center;
     }
     body{
         background-color: rgb(188, 221, 135);
@@ -27,7 +28,7 @@
     h2{
         color: rgb(89, 18, 155);
         cursor: pointer;
-        margin-left: 442px;
+        text-align: center;
         transition: 0.2s;
     }
 
@@ -43,7 +44,7 @@
         padding: 5px;
         background: white;
         margin: 20px;
-        margin-left: 382px;
+        text-align: center;
         transition: 0.2s;
         opacity: 75%;
     }
@@ -55,7 +56,7 @@
     }
 
     p{
-        margin-left: 483px;
+        text-align: center;
     }
     
 </style>
