--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="p">Zulfa Hana Aqliyah</div>
     <p>41215476</p>
 </div>
-<div>
+<div class="ayam">
         <button><a onclick="alert('Apakah kamu ingin melihat My Top 10 Best Friends?')" href="p03">My Top 10 BFF</a>
         </button>
         
