--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <p>41215476</p>
 </div>
 <div class="ayam">
-        <button><a onclick="alert('Apakah kamu ingin melihat My Top 10 Best Friends?')" href="p03">My Top 10 BFF</a>
+        <button><a onclick="alert('Apakah kamu ingin melihat My Top 10 Best Friends?')" href="https://zhanaaql.github.io/p03/table.html">My Top 10 BFF</a>
         </button>
         
     </div>
