--- a/index.html
+++ b/index.html
@@ -97,4 +97,10 @@
         </button>
         
     </div>
+</div>
+<div class="ayam">
+        <button><a onclick="alert('Apakah kamu ingin melihat My Top 5 Best Friends?')" href="p03css/tablecss.html">My Top 5 Bestie</a>
+        </button>
+        
+    </div>
 </body>
