--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@
     </div>
 </div>
 <div class="ayam">
-        <button><a onclick="alert('Apakah kamu ingin melihat My Top 5 Best Friends?')" href="p03css/tablecss.html">My Top 5 Bestie</a>
+        <button><a onclick="alert('Apakah kamu ingin melihat My Top 5 Best Friends?')" href="p03css/tablecss.html">CSS</a>
+        </button>
+        
+    </div>
+<div class="ayam">
+        <button><a onclick="alert('Apakah kamu ingin melihat My Top 10 Best Friends')" href="p03jquery/tablejquery.html">Jquery</a>
         </button>
         
     </div>
