--- a/p03jquery/tablejquery.html
+++ b/p03jquery/tablejquery.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Top 5 My Best Friend</title>
+    <title>JQuery</title>
     <style>
         .iwak{
            display: flex;
