--- a/p03jquery/tablejquery.html
+++ b/p03jquery/tablejquery.html
@@ -170,11 +170,11 @@
                 $('.hana').click(function(){
                     //alert(1)
                     let isi = $(this).text();
-                    //alert(isi);
+                    alert(isi);
 
                     let isi2= prompt('Ubah dengan:', isi);
                     if(!isi2) return;
-                    //alert(isi2);
+                    alert(isi2);
 
                     $(this).text(isi2);
                 })
