--- a/p03form-lv1/formlv1.html
+++ b/p03form-lv1/formlv1.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <div>
-        <img src="kop.png" width="100%">
+        <img src="img/kop.png" width="100%">
     </div>
     
     <h2 style="text-align: center;">Formulir Pendaftaran Siswa Baru</h2>
