--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
 </div>
 <div class="ayam">
-        <button><a onclick="alert('Apakah kamu ingin melihat Table CSS?')" href="p03css/tablecss.html">Table CSS</a>
+        <button><a onclick="alert('Apakah kamu ingin melihat Table CSS?')" href="p03css/index.html">Table CSS</a>
         </button>
         
     </div>
