--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         font-size: 20px;
         font-family: 'Times New Roman', Times, serif;
         }
+    
 
     .p {
         text-align: center;
@@ -61,6 +62,7 @@
     
      button{
         text-align: center;
+        align-items: center;
         border-color: rgb(188, 221, 135);
         cursor: pointer;
         border-radius: 20px;
