--- a/p04css-responsive/index.html
+++ b/p04css-responsive/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div>
-        <img src="kop.png" width="100%">
+        <img src=".../img/kop.png" width="100%">
     </div>
     
     <h2 class="asahi">Formulir Pendaftaran Mahasiswa Baru</h2>
