--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <body>
 <div class="zhana">
     <h2>Hello World</h2>
-    <img src="hana.jpeg">
+    <img src="img/hana.jpeg">
     <br>
     <div class="p">Zulfa Hana Aqliyah</div>
     <p>41215476</p>
