--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
     }
+    .ayam{
+         width: 1000px;
+    }
+    
     p{
         text-align: center;
         font-weight: bold;
