--- a/p04css-responsive/index.html
+++ b/p04css-responsive/index.html
@@ -274,8 +274,11 @@
                         <th align="left">Status Sekolah/Perguruan Tinggi</th>
                         <td>:</td>
                         <td>
-                            <input type="radio" name="status_sekolah" value="negeri">Negeri
-                            <input type="radio" name="status_sekolah" value="swasta">Swasta
+                           <input type="radio" name="pendidikan" id="negri"><label for="sd">Negri</label>
+                            <br>
+                            <input type="radio" name="pendidikan" id="swasta"><label for="swasta">Swasta</label>
+                            <br>
+                            <input type="radio" name="pendidikan" id="luarnegri"><label for="luarnegri">Luar Negri</label>
                         </td>
                     </tr>
                     <tr>
