--- a/index.html
+++ b/index.html
@@ -109,8 +109,11 @@
     <button><a onclick="alert('Apakah kamu ingin melihat Form-Lv1?')" href="p03form-lv1/formlv1.html">Form-Lv1</a>
     </button> || 
     <button><a onclick="alert('Apakah kamu ingin melihat Form-Lv2?')" href="p04css-basic/formlv2.html">Form-Lv2</a>
-    </button>
-    
-</div>
+    </button> || 
+    <button><a onclick="alert('Apakah kamu ingin melihat Form-Responsive?')" href="p04css-responsive/index.html">Form-Responsive</a></button> 
+</div>    
+<div>
+   <button><a onclick="alert('Apakah kamu ingin melihat JQuery FadeOut?')" href="p04css-responsive/index.html">JQuery FadeOut</a></button> 
+    </div>
 </center>
 </body>
