--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <button><a onclick="alert('Apakah kamu ingin melihat Form-Responsive?')" href="p04css-responsive/index.html">Form-Responsive</a></button> 
 </div>    
 <div>
-   <button><a onclick="alert('Apakah kamu ingin melihat JQuery FadeOut?')" href="p04css-responsive/index.html">JQuery FadeOut</a></button> 
+   <button><a onclick="alert('Apakah kamu ingin melihat JQuery FadeOut?')" href="p05-jquery-delete/index.html">JQuery FadeOut</a></button> 
     </div>
 </center>
 </body>
