--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div id="home" class="isi">
                   <center>
                     <br>
-                    <img src="hello!.gif" >
+                    <img src="img/hello!.gif" >
                     <br>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     <br>Selamat Datang di Halaman Home
@@ -68,7 +68,7 @@
                    <center>
                    <br>
                    <p>MY PROFILE</p>
-                   <img src="hana.jpeg">
+                   <img src="img/hana.jpeg">
                    <br>
                    <p>Nama : Zulfa Hana Aqliyah</p>
                    <p>NIM : 41215476</p>
