--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div id="home" class="isi">
                   <center>
                     <br>
-                    <img src="img/Hello!.gif" >
+                    <img src="img/hello.gif" >
                     <br>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     <br>Selamat Datang di Halaman Home
